# dyadic

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  ci_compile_check.sh  dyadic.h  dyadic_verify.h  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml  test.yml
build-heavy/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmark  cmake_install.cmake  test_core  test_full  test_negatives  test_property  test_verify  test_verify_san
docs/: api.md  bug_history.md  complexity.md  development.md  index.md  mathematics.md  mersenne_ghost_theorem.md  padic_newton_dynamics.md  precision.md  research_opportunities.md  theory.md
docs/newton_dynamics/: clean_primes.md  computation_data.md  index.md  status.md  theorems.md
examples/: 01_dual_number_basics.py  02_basin_explorer.py  03_seed_thermodynamics.py  03_weight_stability.py  04_mersenne_ghost.py
include/dyadic/: api.md  arith.h  basis.h  calculus.h  combinatorial.h  compose.h  continued_fractions.h  core.h  dynamic_polynomial.h  gcd.h  matrix.h  pade.h  prng.h  verify.h  witt.h
research/: popcount_compression.py  unified_butterfly_guidance.md
research/newton_dynamics/: __init__.py  clean_primes.py  data.py  dynatomic.py  iterates.py  poly.py  test_newton_dynamics.py
test/: benchmark.cpp  test_core.cpp  test_full.cpp  test_negatives.cpp  test_property.cpp  test_util.h  test_verify.cpp
